# serializer version: 1
# name: test_if_whitespaces_are_stripped_from_connection_name
  '''
  [connections.whitespaceTest]
  account = "accName"
  user = "userName"
  password = "123"
  host = "baz"
  region = "Kaszuby"
  port = 12345
  database = "foo"
  schema = "bar"
  warehouse = "some warehouse"
  role = "some role"
  authenticator = "foo"
  private_key_file = ""
  
  '''
# ---
# name: test_if_whitespaces_are_stripped_from_connection_name.1
  '''
  [
      {
          "connection_name": "whitespaceTest",
          "parameters": {
              "account": "accName",
              "user": "userName",
              "password": "****",
              "host": "baz",
              "region": "Kaszuby",
              "port": 12345,
              "database": "foo",
              "schema": "bar",
              "warehouse": "some warehouse",
              "role": "some role",
              "authenticator": "foo",
              "private_key_file": ""
          },
          "is_default": false
      }
  ]
  
  '''
# ---
# name: test_new_connection_add_prompt_handles_default_values
  '''
  [connections.connName]
  account = "accName"
  user = "userName"
  
  '''
# ---
# name: test_new_connection_add_prompt_handles_prompt_override
  '''
  [connections.connName]
  account = "accName"
  user = "userName"
  password = "dbName"
  
  '''
# ---
# name: test_new_connection_can_be_added
  '''
  [connections.conn1]
  account = "account1"
  user = "user1"
  password = "password1"
  port = 8080
  
  '''
# ---
# name: test_new_connection_can_be_added_as_default
  '''
  default_connection_name = "default-conn"
  [connections.default-conn]
  account = "account1"
  user = "user1"
  password = "password1"
  
  '''
# ---
# name: test_new_connection_with_jwt_auth
  '''
  [connections.conn2]
  account = "account1"
  user = "user2"
  authenticator = "SNOWFLAKE_JWT"
  private_key_file = "~/private_key"
  
  '''
# ---
# name: test_second_connection_not_update_default_connection
  '''
  [connections]
  [connections.conn]
  username = "foo"
  
  [connections.conn2]
  account = "account1"
  user = "user1"
  password = "password1"
  [options]
  default_connection = "conn"
  
  '''
# ---
